2005-09-30  ENDO Yasuyuki <yasuyuki@javaopen.org>

	* src/kahua/persistence.scm :
	add primary key in create table of kahua_db_classes and kahua_*

2005-09-23  Nobuo Yamashita  <nobsun@sampou.org>

	* plugins/allow-module.scm:
	added srfi-19

2005-09-11  Shiro Kawai  <shiro@acm.org>

	* src/kahua/session.scm: 
	(use gauche.validator) -> (use gauche.mop.validator)  The former name
	is obsoleted.

2005-08-30  ENDO Yasuyuki <yasuyuki@javaopen.org>

        * src/kahua/persistence.scm : use dbi-escape-sql.

2005-08-24  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-keyserv.scm, src/kahua/config.scm.in:
	Enabled to record kahua-keyserv's process id in 
	work-directory/kahua-keyserv.pid
	

2005-08-22 ENDO Yasuyuki <yasuyuki@javaopen.org>

	* src/kahua/user.scm
	Add and export kahua-user-password-change-force.
	
	* test/user.scm.in
	Add test "kahua-user-password-change" and
	"kahua-user-password-change-force".

2005-08-19 Katsutoshi Itoh <cut-sea@timedia.co.jp>

	* src/kauha/config.scm.in
	Add new slot into kahua-custom.
	The new slot name is secure-sandbox,
	which can take value #f or the other.

	* src/kahua/sandbox.scm
	A value #f means we can make insecure sandbox.

2005-08-17 Katsutoshi Itoh <cut-sea@timedia.co.jp>

	* src/kahua/plugin.scm
	take care of a module which include export-all like as sxml.ssax.

2005-08-17  ENDO Yasuyuki <yasuyuki@javaopen.org>
	
	* Release 0.3.3
	Supported FastCGI.

2005-08-13  SHIBATA Tomohisa  <shibata@timedia.co.jp>

	* src/kahua/server.scm:
	Fixed quasiquote miss(RSS).
	Improved encoding check(RSS).

2005-08-06  Nobuo Yamashita  <nobsun@sampou.org>

	* src/Makefile.in:
	modified in order to install src/kahua/error-report.scm.

2005-08-06  Kenji Hisazumi  <nel@soraneko.com>

	* src/kahua/error-report.scm, src/kahua.scm, src/kahua/sandbox.scm:
	added error report system which handles exception occured in kahua
	applicatoin and logs these exceptions to kahua-spvr.log.
	we can use it with (kahua-error-proc kahua-error-report-proc).
