@@ -1,3 +1,11 @@
+2005-10-04  SHIBATA Tomohisa  <shibata@kahua.org>
+
+	* cgi/kahua.cgi.in:
+	pass CGI metavariables to the server via "x-kahua-metavariables"
+	header fields.
+	* src/kahua/server.scm:
+	Added API(kahua-meta-ref) for CGI metavariables.
+
 2005-09-30  ENDO Yasuyuki <yasuyuki@javaopen.org>
 
 	* src/kahua/persistence.scm :
